# content_creator_ai_series

./: README.md
part_1/: .env.example  .gitignore  README.MD  content_creator.ipynb  docker-compose.yml
part_1/prompts/: prompts.py
part_2/: .env.example  .gitignore  README.md  requirements.txt
part_2/app/: main.py
part_3/: .env.example  README.md  docker-compose.yml  pyproject.toml
part_3/alembic/versions/: 590234b3400b_initial_migration.py  afe25d12b8be_add_social_media_model.py
part_3/src/: main.py
part_3/src/content/: api.py
part_3/src/content/models/: blog_posts.py  images.py  social_media_post.py  workflows.py
part_3/src/content/repositories/blogs/: blog_repository.py  blog_repository_interface.py
part_3/src/content/repositories/social_media/: social_media_repository.py  social_media_repository_interface.py
part_3/src/content/repositories/workflow/: workflow_repository.py  workflow_repository_interface.py
part_3/src/content/schemas/: blog_posts.py  social_media_post.py  workflow.py
part_3/src/content/services/: blog_service.py  image_service.py  social_media_service.py  tavily_search_service.py  workflow_service.py
part_3/src/content/workflows/: advanced_workflow.py
part_3/src/core/: api.py  database.py  middleware.py
part_3/src/settings/: config.py
part_4/: README.md
part_4/content_assistant_server/: .env.example  README.md
part_4/content_assistant_web/: .env  package-lock.json  package.json  rsbuild.config.ts
part_5/content_assistant_server/: .gitignore  Dockerfile
part_5/content_assistant_web/: .env.example  Dockerfile  (+4 more)
(+79 files in other folders)
